fix: fully remove L from surface vars

--- a/packages/assets/styles/variables.scss
+++ b/packages/assets/styles/variables.scss
@@ -388,11 +388,11 @@ html {
 
 .oled-mode {
 	@extend .dark-mode;
-	--surface-l1: #000000;
-	--surface-l2: #101013;
-	--surface-l3: #1b1b20;
-	--surface-l4: #25262b;
-	--surface-l5: #2e2f34;
+	--surface-1: #000000;
+	--surface-2: #101013;
+	--surface-3: #1b1b20;
+	--surface-4: #25262b;
+	--surface-5: #2e2f34;
 
 	--color-ad: #0d1828;
 
