--- a/packages/assets/styles/variables.scss
+++ b/packages/assets/styles/variables.scss
@@ -303,7 +303,7 @@ html {
 
 	--color-text-primary: #ffffff;
 	--color-text-default: #b0bac5;
-	--color-text-tertiary: #80878f;
+	--color-text-tertiary: #96a2b0;
 
 	// ===
 
