--- a/packages/assets/styles/variables.scss
+++ b/packages/assets/styles/variables.scss
@@ -127,10 +127,12 @@
 	--shadow-inset-sm: inset 0px -1px 2px hsla(221, 39%, 91%, 0.15);
 
 	--shadow-raised-lg: 0px 2px 4px hsla(221, 39%, 11%, 0.2);
-	--shadow-raised: 0.3px 0.5px 0.6px hsl(var(--shadow-color) / 0.15),
+	--shadow-raised:
+		0.3px 0.5px 0.6px hsl(var(--shadow-color) / 0.15),
 		1px 2px 2.2px -1.7px hsl(var(--shadow-color) / 0.12),
 		4.4px 8.8px 9.7px -3.4px hsl(var(--shadow-color) / 0.09);
-	--shadow-floating: hsla(0, 0%, 0%, 0) 0px 0px 0px 0px, hsla(0, 0%, 0%, 0) 0px 0px 0px 0px,
+	--shadow-floating:
+		hsla(0, 0%, 0%, 0) 0px 0px 0px 0px, hsla(0, 0%, 0%, 0) 0px 0px 0px 0px,
 		hsla(0, 0%, 0%, 0.1) 0px 4px 6px -1px, hsla(0, 0%, 0%, 0.1) 0px 2px 4px -1px;
 
 	--shadow-card: rgba(50, 50, 100, 0.1) 0px 2px 4px 0px;
@@ -348,7 +350,8 @@ html {
 
 	--shadow-raised-lg: 0px 2px 4px hsla(221, 39%, 11%, 0.2);
 	--shadow-raised: 0px -2px 4px hsla(221, 39%, 11%, 0.1);
-	--shadow-floating: hsla(0, 0%, 0%, 0) 0px 0px 0px 0px, hsla(0, 0%, 0%, 0) 0px 0px 0px 0px,
+	--shadow-floating:
+		hsla(0, 0%, 0%, 0) 0px 0px 0px 0px, hsla(0, 0%, 0%, 0) 0px 0px 0px 0px,
 		hsla(0, 0%, 0%, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
 
 	--shadow-card: rgba(0, 0, 0, 0.25) 0px 2px 4px 0px;
