feat: surface 1.5 for oled + refactor story for contentcardtable + yeet sorting funcs

--- a/packages/assets/styles/variables.scss
+++ b/packages/assets/styles/variables.scss
@@ -396,6 +396,7 @@ html {
 .oled-mode {
 	@extend .dark-mode;
 	--surface-1: #000000;
+	--surface-1-5: #050506;
 	--surface-2: #09090a;
 	--surface-3: #101013;
 	--surface-4: #1b1b20;
