--- a/packages/assets/styles/variables.scss
+++ b/packages/assets/styles/variables.scss
@@ -1,5 +1,6 @@
 .light-properties {
 	--surface-1: #ebebeb;
+	--surface-1-5: #ededed;
 	--surface-2: #f5f5f5;
 	--surface-3: #f8f8f8;
 	--surface-4: #ffffff;
@@ -221,6 +222,7 @@ html {
 .dark,
 :root[data-theme='dark'] {
 	--surface-1: #16181c;
+	--surface-1-5: #1a1c20;
 	--surface-2: #1d1f23;
 	--surface-3: #27292e;
 	--surface-4: #34363c;
@@ -392,6 +394,7 @@ html {
 .oled-mode {
 	@extend .dark-mode;
 	--surface-1: #000000;
+	--surface-1-5: #050506;
 	--surface-2: #09090a;
 	--surface-3: #101013;
 	--surface-4: #1b1b20;
