--- a/packages/assets/styles/accessibility.scss
+++ b/packages/assets/styles/accessibility.scss
@@ -1,6 +1,6 @@
-button:focus-visible,
-a:focus-visible,
-[tabindex='0']:focus-visible {
-	outline: 0.25rem solid #ea80ff;
-	border-radius: 0.25rem;
+button:focus-visible:not(.custom-focus-indicator),
+a:focus-visible:not(.custom-focus-indicator),
+[tabindex='0']:focus-visible:not(.custom-focus-indicator),
+[type='button']:focus-visible:not(.custom-focus-indicator) {
+	outline: 0.25rem solid var(--color-focus-ring);
 }
