--- a/packages/assets/styles/variables.scss
+++ b/packages/assets/styles/variables.scss
@@ -211,6 +211,8 @@ html {
 	--color-link-active: var(--color-blue) !important; // DEPRECATED, use filters in future
 
 	--shadow-button: 0 1px 3px 0 rgba(0, 0, 0, 0.05), 0 1px 2px 0 rgba(0, 0, 0, 0.15);
+
+	--color-focus-ring: #ea80ff;
 }
 
 .light-mode,
