add sidebar server info card

--- a/apps/frontend/src/assets/styles/components.scss
+++ b/apps/frontend/src/assets/styles/components.scss
@@ -1113,7 +1113,7 @@ svg.inline-svg {
 		display: flex;
 		flex-direction: column;
 		gap: var(--gap-12);
-		padding: var(--gap-16) var(--gap-24);
+		padding: var(--gap-16);
 
 		h2 {
 			font-size: var(--text-18);
